--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,8 +15,12 @@
         padding-bottom: 42px;
     }
 
-    .hidden {
+    .hidden-mobile {
         display: none;
+    }
+
+    .hidden-desktop {
+        display: flex;
     }
 
     .header {
@@ -28,6 +32,10 @@
         width: 24px;
         height: 14px;
         padding-top: 27px;
+    }
+
+    .menu-icon {
+        cursor: pointer;
     }
 
     .name-page {
@@ -59,20 +67,18 @@
         width: 335px;
     } 
 
-    .content__intro-title {
+    .content__intro-heading {
         font-size: 3.6rem;
         line-height: 4.296rem;
         margin-top: 32px;
     }
 
-    .content__intro-sub-title {
+    .content__intro-sub-heading {
         font-size: 1.6rem;
         line-height: 2.72rem;
         width: 335px;
         padding-top: 24px;
         margin-bottom: 52px;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     .content__intro-border {
@@ -81,7 +87,7 @@
         background-color: var(--black-color);
     }
 
-    .content__article-title {
+    .content__article-heading {
         font-size: 3.2rem;
         line-height: 3.819rem;
         padding: 56px 0 29px;
