--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -62,6 +62,10 @@ body {
     width: 282px !important;
 }
 
+.width-270 {
+    width: 270px;
+}
+
 .ny-small {
     font-family: 'New York Small', sans-serif;
 }
