--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,12 +106,13 @@
 
 .footer__feature-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     list-style: none;
     font-size: 2.0rem;
     line-height: 2.8rem;
     padding-top: 18px;
     text-align: center;
+    margin: 0 -6px;
 }
 
 .footer__feature-item {
